# pythonic-fp-booleans

./: CHANGELOG.rst  README.rst  pyproject.toml
.github/workflows/: static.yml
docs/: Makefile  conf_custom.py  conf_devel.py  conf_release.py  gen_conf.py  index_custom.rst  index_devel.rst  index_release.rst
docs/source/: changelog.rst  description.rst  index.rst  releases.rst  usage.rst
docs/source/api/: index.rst  truthy_falsy.rst
docs/source/docs/: flavored.rst  index.rst  subtypable.rst  truthy_falsy.rst
docs/source/docs/subtypes/: flavored.rst  index.rst  truthy_falsy.rst
src/pythonic_fp/booleans/: __init__.py  flavored.py  flavored.pyi  flavored_booleans.py  flavored_booleans.pyi  ibool.py  sbool.py  sbool.pyi  subtypable.py  subtypable.pyi  subtypable_boolean.py  true_and_false_subtyped_booleans.py  true_and_false_subtyped_booleans.pyi  truthy_falsy.py  truthy_falsy.pyi
src/pythonic_fp/booleans/invariant/: __init__.py
src/pythonic_fp/booleans/subtypable/: __init__.py  sbool.py  sbool.pyi  tfsbool.py  tfsbool.pyi
src/pythonic_fp/booleans/subtypes/: __init__.py  flavored.py  flavored.pyi  flavored_booleans.py  flavored_booleans.pyi  true_and_false_subtyped_booleans.py  true_and_false_subtyped_booleans.pyi  true_false.py  true_false.pyi  truthy_falsy.py
tests/: test_bool_vs_sbool.py  test_flavored.py  test_flavored_non_shortcut_logic.py  test_flavored_sbool.py  test_non_shortcut_logic.py  test_sbool.py  test_sbool_non_shortcut_logic.py  test_sbool_plus_mult_minus.py  test_sbool_truthy_falsy_subclasses.py  test_true_and_false_subtyped_booleans.py  test_true_false.py  test_true_false_non_shortcut_logic.py  test_typing.py  test_variance.py  test_with_bool.py
