[build-system]
requires = ["flit_core>=3.12,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pythonic-fp-booleans"
version = "0.1.0"
readme = "README.rst"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Geoffrey R. Scheller", email = "geoffrey@scheller.com" }]
keywords = [
  "singleton",
  "sentinel",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = []
dynamic = ["description"]

[project.optional-dependencies]
test = [
  "pytest>=8.4.1",
]

[project.urls]
Changelog = "https://github.com/grscheller/pythonic-fp-booleans/blob/main/CHANGELOG.rst"
Documentation = "https://grscheller.github.io/pythonic-fp/booleans/development/build/html/releases.html"
Homepage = "https://github.com/grscheller/pythonic-fp/blob/main/README.md"
Source = "https://github.com/grscheller/pythonic-fp-booleans"

[tool.flit.module]
name = "pythonic_fp.booleans"

[tool.mypy]
enable_incomplete_feature = "NewGenericSyntax"
explicit_package_bases = true
implicit_reexport = false
local_partial_types = true
namespace_packages = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true

[tool.pylsp-mypy]
enabled = true
live-mode = false
dmypy = true
strict = true
report_progress = true

[tool.pytest.ini_options]
consider_namespace_packages = true
testpaths = ["tests/"]
addopts = "-ra"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.format]
quote-style = "single"
docstring-code-line-length = 72
